# win11-toggle-rounded-corners

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  llvm_56379_workaround.hpp  main.cpp  setup.iss  uac.manifest  uac.rc
